Avoid regions expand on mobile

--- a/app/javascript/app/components/ghg-multiselect-dropdown/ghg-multiselect-dropdown-styles.scss
+++ b/app/javascript/app/components/ghg-multiselect-dropdown/ghg-multiselect-dropdown-styles.scss
@@ -203,10 +203,14 @@ $container-padding: 15px;
 }
 
 .regionButton {
+  display: block;
   width: 20px;
   height: 20px;
   cursor: pointer;
   position: absolute;
+  @media #{$mobile-only} {
+    display: none;
+  }
 }
 
 .regionArrow {
